--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style/tablet.css">
     <link rel="stylesheet" href="./style/desktop.css">
     <link rel="stylesheet" href="./style/style.css">
-    <title>тестове завдання. Адаптивна верстка</title>
+    <title>Тестове завдання. Адаптивна верстка</title>
 </head>
 <body>
     <div class="main-wrap">
